--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Work in progress ... </title>
     <meta charset="utf-8">
-    </head>
+  </head>
+</html>
 
