--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <title>Work in progress ... </title>
     <meta charset="utf-8">
   </head>
+  <body>
+    <h1>Work in progress ...</h1>
+  </body>
 </html>
 
